# many-rs

./: .bazelrc  .bazelversion  .commitlintrc  .dockerignore  .gitignore  BUILD.bazel  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASING.md  WORKSPACE.bazel  cargo-bazel-lock.json  cliff.toml  my_package_name.bzl  release.sh  rules.bzl  rust-toolchain.toml
.circleci/: config.yml
.github/workflows/: audit.yml  ci.yml  coverage.yml
cli/: Cargo.toml
cli/src/: main.rs
docker/: .gitignore  BUILD.bazel  Makefile  Makefile.common  Makefile.dweb  Makefile.kvstore  Makefile.ledger  Makefile.web  build.dockerfile  docker-compose-kvstore.jsonnet  docker-compose-ledger.jsonnet  docker-compose-web.jsonnet  generate-allow-addrs.sh  update_config.sh
docker/abci/: Dockerfile
docker/e2e/: .gitignore  Cargo.nix  Makefile  Makefile.common  Makefile.kvstore  Makefile.ledger  build-image.sh  docker-compose-kvstore.jsonnet  docker-compose-ledger.jsonnet  flake.nix  generate-allow-addrs.sh  generate-cargo-nix.sh  kvstore_state.json  ledger_state.json  update_config.sh
docker/ledger/: Dockerfile
keys/: DO_NOT_USE_IN_PRODUCTION  id1.pem  id2.pem  id3.pem
scripts/: create_pem.sh  deps.sh  run.sh
src/: client.rs  identity.rs  lib.rs  main.rs  message.rs  protocol.rs  server.rs  transport.rs
src/genesis-from-db/: BUILD.bazel  Cargo.toml  README.md
src/genesis-from-db/src/: main.rs
src/http-proxy/: BUILD.bazel  Cargo.toml
src/http-proxy/src/: main.rs
src/http_proxy/: BUILD.bazel  Cargo.toml
src/http_proxy/src/: main.rs
src/identity/: cose.rs
src/idstore-export/: BUILD.bazel  Cargo.toml
src/idstore-export/src/: main.rs
src/integration-tests/: Cargo.toml
src/integration-tests/src/: main.rs
src/kvstore/: BUILD.bazel  Cargo.toml
src/kvstore/src/: main.rs
src/ledger/: BUILD.bazel  Cargo.toml
src/ledger-db/: BUILD.bazel  Cargo.toml
src/ledger-db/src/: main.rs
src/ledger/src/: main.rs  multisig.rs  tokens.rs
src/many/: BUILD.bazel  Cargo.toml  Cargo.toml.orig
src/many-abci/: BUILD.bazel  Cargo.toml  build.rs
src/many-abci/docs/: request-response.puml
src/many-abci/src/: abci_app.rs  lib.rs  main.rs  many_app.rs  migration.rs  module.rs
src/many-abci/src/migration/: error_code.rs
src/many-cli/: BUILD.bazel  Cargo.toml
src/many-cli-helpers/: BUILD.bazel  Cargo.toml
src/many-cli-helpers/src/: error.rs  lib.rs
src/many-cli/src/: main.rs
src/many-client/: BUILD.bazel  Cargo.toml
src/many-client-macros/: BUILD.bazel  Cargo.toml
src/many-client-macros/src/: lib.rs
src/many-client/src/: client.rs  lib.rs
src/many-compute/: BUILD.bazel  Cargo.toml  README.md
src/many-compute/src/: error.rs  lib.rs  main.rs  module.rs  opt.rs  storage.rs  validator.rs
src/many-error/: BUILD.bazel  Cargo.toml
src/many-error/src/: error.rs  lib.rs  reason.rs
src/many-identity/: BUILD.bazel  Cargo.toml
src/many-identity-cose/: Cargo.toml
src/many-identity-cose/src/: cose_helpers.rs  impls.rs  lib.rs
src/many-identity-dsa/: BUILD.bazel  Cargo.toml
src/many-identity-dsa/src/: impls.rs  lib.rs
src/many-identity-ed25519/: Cargo.toml
src/many-identity-ed25519/src/: cose_helpers.rs  lib.rs
src/many-identity-hsm/: BUILD.bazel  Cargo.toml
src/many-identity-hsm/src/: lib.rs
src/many-identity-webauthn/: BUILD.bazel  Cargo.toml
src/many-identity-webauthn/src/: challenge.rs  identity.rs  lib.rs  verifier.rs
src/many-identity/src/: address.rs  cose.rs  hsm.rs  identity.rs  lib.rs
src/many-kvstore/: BUILD.bazel  Cargo.toml  build.rs
src/many-kvstore/src/: error.rs  main.rs  module.rs  storage.rs
src/many-kvstore/tests/: account.rs  events.rs  kvstore.rs  kvstore_account.rs  storage.rs
src/many-ledger/: BUILD.bazel  Cargo.toml
src/many-ledger/src/: error.rs  json.rs  lib.rs  (+4 more)
src/many-macros/: BUILD.bazel  Cargo.toml
src/many-migration/: BUILD.bazel  Cargo.toml  README.md
src/many-mock/: BUILD.bazel  Cargo.toml  README.md
src/many-modules/: BUILD.bazel  Cargo.toml
src/many-protocol/: BUILD.bazel  Cargo.toml
src/many-server/: BUILD.bazel  Cargo.toml
src/many-server-cache/: BUILD.bazel  Cargo.toml
src/many-types/: BUILD.bazel  Cargo.toml
src/many-web/: BUILD.bazel  Cargo.toml  README.md
src/message/: error.rs  request.rs  response.rs
src/omni/: Cargo.toml
src/omni-cli/: Cargo.toml
src/omni-client/: Cargo.toml
src/omni-module/: Cargo.toml
src/protocol/: attributes.rs
src/server/: function.rs  module.rs
src/transport/: http.rs
src/web/: BUILD.bazel  Cargo.toml
staging/: BUILD.bazel  DO_NOT_USE_IN_PRODUCTION  README.md  abci_migrations.json  compute_state.json5  kvstore_state.json5  ledger_migrations.json  ledger_state.json5  web_state.json5
tests/: BUILD.bazel  abci_migrations.json  ledger_migrations.json
tests/e2e/http-proxy/: BUILD.bazel  http-proxy.bats
tests/e2e/kvstore/: BUILD.bazel  allow_addrs.bats  cache.bats  kvstore.bats
tests/e2e/ledger/: BUILD.bazel  allow_addrs.bats  blockchain.bats  cache.bats  ledger.bats  migrations.bats  mintburn.bats  multisig.bats  staging.bats  token_migration_sender_verification.bats  tokens.bats  tokens_no_migration.bats  webauthn.bats  webauthn_state.json
tests/e2e/web/: BUILD.bazel  web.bats
tests/resiliency/kvstore/: BUILD.bazel  abci-allow-addrs.bats  catch-up.bats  limits.bats  persistent_store.bats  up-down.bats
tests/resiliency/ledger/: BUILD.bazel  abci-allow-addrs.bats  abci.bats  abci_migration.bats  account_count_migration.bats  catch-up.bats  disable_token_creation_migration.bats  disable_token_minting_migration.bats  dummy_migration.bats  hash_migration.bats  legacy_remove_roles_migration.bats  memo_migration.bats  no_mempool_cache.bats  persistent_store.bats  tendermint.bats  token_creation_migration.bats  token_migration.bats  token_subresource.bats  up-down.bats
tests/resiliency/web/: BUILD.bazel  catch-up.bats  limits.bats  up-down.bats  web.bats
tests/test_helper/: account.bash  http-proxy.bash  kvstore.bash  ledger.bash  load.bash  many.bash  token.bash  web.bash
tests/test_helper/bats-utils/: assertions  helper-function  helpers
(+340 files in other folders)
