[workspace]
resolver = "2"

members = [
    "src/http_proxy",
    "src/idstore-export",
    "src/kvstore",
    "src/ledger",
    "src/ledger-db",
    "src/many",
    "src/many-abci",
    "src/many-client",
    "src/many-client-macros",
    "src/many-error",
    "src/many-identity",
    "src/many-identity-dsa",
    "src/many-identity-hsm",
    "src/many-identity-webauthn",
    "src/many-kvstore",
    "src/many-ledger",
    "src/many-ledger/test-macros",
    "src/many-ledger/test-utils",
    "src/many-macros",
    "src/many-migration",
    "src/many-mock",
    "src/many-modules",
    "src/many-protocol",
    "src/many-server",
    "src/many-types",
]
