[workspace]
resolver = "2"

members = [
    "src/genesis-from-db",
    "src/http_proxy",
    "src/idstore-export",
    "src/kvstore",
    "src/ledger",
    "src/ledger-db",
    "src/many",
    "src/many-abci",
    "src/many-cli-helpers",
    "src/many-client",
    "src/many-client-macros",
    "src/many-compute",
    "src/many-error",
    "src/many-identity",
    "src/many-identity-dsa",
    "src/many-identity-hsm",
    "src/many-identity-webauthn",
    "src/many-kvstore",
    "src/many-ledger",
    "src/many-ledger/test-macros",
    "src/many-ledger/test-utils",
    "src/many-macros",
    "src/many-migration",
    "src/many-mock",
    "src/many-modules",
    "src/many-protocol",
    "src/many-server",
    "src/many-server-cache",
    "src/many-types",
]

[profile.release]
strip = true  # Strip debug info from release build
lto = true  # Perform "fat" LTO
codegen-units = 1 # Improve the performance of the generated code at the cost of compile time
incremental = false

[profile.dev]
incremental = false
