[package]
name = "omni-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "omni"
path = "src/main.rs"

[dependencies]
omni = { path = "../" }
anyhow = "1.0.44"
async-trait = "0.1.51"
backtrace = "0.3"
base32 = "0.4.0"
base64 = "0.13.0"
cbor-diag = "0.1.8"
clap = { version = "3.0.0-rc.9", features = [ "derive" ] }
crc-any = "2.4.0"
derive_builder = "0.10.2"
ecdsa = "0.12.4"
ed25519 = { version = "1.2.0", features = [ "std" ] }
ed25519-dalek = { version = "1.0.1", features = [ "std" ] }
hex = "0.4.3"
lazy_static = "1.4.0"
minicbor = { version = "0.12.0", features = ["derive", "half", "std"] }
minicose = { git = "ssh://git@github.com/l-1-labs/rust-minicose.git", features = [ "allow-unsigned" ] }
num-derive = "0.3.3"
num-traits = "0.2.14"
p256 = { version = "0.9.0", features = [ "pem", "ecdsa", "std" ] }
pem = { version = "1.0.0", optional = true }
pkcs8 = { version = "0.8", features = [ "pem", "std", "encryption" ] }
openssh-keys = "0.5.0"
regex = "1.5.4"
reqwest = { version = "0.11.5", features = ["blocking"] }
ring = "0.16"
ring-compat = "0.3.2"
serde = { version = "1.0.130" }
sha3 = "0.9.1"
simple_asn1 = "0.5.4"
signature = "1.3"
static_assertions = "1.1.0"
thiserror = "1.0.29"
tracing = "0.1.29"
tokio = { version = "1.12.0", features = [ "full" ] }
tiny_http = "0.9.0"

[features]
default = []
client = []
